# MusicShift

./: .env  .replit  README.md  __init__.py  drizzle.config.ts  genre_transform_test.py  metadata.json  package-lock.json  package.json  pyproject.toml  quick_transform.py  run.py  transform_single.py
client/src/: App.tsx  index.css
client/src/components/: workflow-steps.tsx
client/src/components/layout/: footer.tsx  header.tsx
client/src/components/ui/: dropzone.tsx  waveform.tsx
client/src/hooks/: use-audio.tsx
client/src/lib/: utils.ts
client/src/pages/: conversion-result.tsx  home.tsx  transform.tsx
db/: index.ts  seed.ts
python_backend/: app.py
python_backend/models/: database.py
python_backend/routes/: uploads.py
python_backend/utils/: audio_processor.py
server/: index.ts  routes.ts  storage.ts
shared/: schema.ts
